; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-aimslab.c_send_0_byte.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-aimslab.c_send_0_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtrack = type { i64, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rtrack*)* @send_0_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_0_byte(%struct.rtrack* %0) #0 {
  %2 = alloca %struct.rtrack*, align 8
  store %struct.rtrack* %0, %struct.rtrack** %2, align 8
  %3 = load %struct.rtrack*, %struct.rtrack** %2, align 8
  %4 = getelementptr inbounds %struct.rtrack, %struct.rtrack* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %12, label %7

7:                                                ; preds = %1
  %8 = load %struct.rtrack*, %struct.rtrack** %2, align 8
  %9 = getelementptr inbounds %struct.rtrack, %struct.rtrack* %8, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %7, %1
  %13 = load %struct.rtrack*, %struct.rtrack** %2, align 8
  %14 = getelementptr inbounds %struct.rtrack, %struct.rtrack* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @outb_p(i32 209, i32 %15)
  %17 = load %struct.rtrack*, %struct.rtrack** %2, align 8
  %18 = getelementptr inbounds %struct.rtrack, %struct.rtrack* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @outb_p(i32 211, i32 %19)
  br label %30

21:                                               ; preds = %7
  %22 = load %struct.rtrack*, %struct.rtrack** %2, align 8
  %23 = getelementptr inbounds %struct.rtrack, %struct.rtrack* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @outb_p(i32 217, i32 %24)
  %26 = load %struct.rtrack*, %struct.rtrack** %2, align 8
  %27 = getelementptr inbounds %struct.rtrack, %struct.rtrack* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @outb_p(i32 219, i32 %28)
  br label %30

30:                                               ; preds = %21, %12
  %31 = call i32 @sleep_delay(i32 1000)
  ret void
}

declare dso_local i32 @outb_p(i32, i32) #1

declare dso_local i32 @sleep_delay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
